# dbx

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  package.json  task-1.md  task-2.md  task-3.md  task-4.md  task.md
.github/workflows/: ci.yml  docs.yml  mcp-release.yml  release.yml
.husky/: pre-commit
apps/desktop/src/: App.vue
crates/dbx-core/: Cargo.toml
crates/dbx-core/src/: agent_connection.rs  agent_loop.rs  ai.rs  cloud_sync.rs  connection.rs  connection_secrets.rs  data_grid_sql.rs  jdbc.rs  lib.rs  plugins.rs  query.rs  schema.rs  sql_risk.rs  storage.rs  transfer.rs  update.rs
crates/dbx-core/tests/: live_postgres_transfer.rs
crates/dbx-mcp/: Cargo.toml
crates/dbx-mcp/src/: config.rs  events.rs  http.rs  lib.rs  service.rs  tools.rs
crates/dbx-schema-rag-sidecar/: Cargo.toml  build.rs
crates/dbx-schema-rag-sidecar/src/: lib.rs  main.rs
crates/dbx-web/: Cargo.toml
docs/content/docs/: databases.cn.mdx  databases.mdx  mcp.cn.mdx  mcp.mdx
docs/fork-overlay/: inventory.md
mcp/src/: connections.ts  database.ts  web-backend.ts
plugins/jdbc/: pom.xml
scripts/: mcp-http-smoke.mjs  run-check.mjs  schema_rag_embedding_probe.py
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  window_state_guard.rs
src-tauri/src/commands/: ai.rs  app_settings.rs  connection.rs  mod.rs  (+4 more)
src/composables/: useAppUpdater.ts
src/lib/: ai.ts  api.ts  defaultDatabase.ts  http.ts  tauri.ts
src/stores/: connectionStore.ts  settingsStore.ts
src/types/: database.ts
tests/: defaultDatabase.test.ts
(+54 files in other folders)
