[package]
name = "dbx-schema-rag-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
futures = "0.3"
kuzu = "0.11.3"

[build-dependencies]
# Keep Kuzu's cxx codegen and cxx runtime on the same bridge version for MSVC.
cxx-build = "=1.0.138"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
